fix: Horizontal scrollbar appears in Gallery Detail

--- a/MediaCloud/wwwroot/css/site.css
+++ b/MediaCloud/wwwroot/css/site.css
@@ -454,7 +454,7 @@ body {
 .picture-viewer {
     object-fit: contain; 
     height: 80vh;
-    max-width: 85vw;
+    max-width: 82vw;
     animation-iteration-count: 1;
 }
 
